--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      NEXT_PUBLIC_BASE_PATH: /auto_analyst_ui
+      NEXT_PUBLIC_BASE_PATH: /auto_pricing_ui
       NEXT_PUBLIC_API_URL: https://18.189.253.176.sslip.io
     steps:
       - uses: actions/checkout@v4
